--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
-
+david
+has
+a
+boat
 </body>
 </html>
